force-app/main/default/objects/Target_Distribution__c/Target_Distribution__c.object-meta.xml
<CustomObject>
    <label>Target Distribution</label>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>TD Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>