force-app/main/default/objects/Target_Distribution__c/fields/Allocated_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Percentage__c</fullName>
    <label>Allocated Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>