force-app/main/default/objects/Target_Distribution__c/fields/BDM__c.field-meta.xml
<CustomField>
    <fullName>BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BDM_Target_Distribustions</relationshipName>
    <type>Lookup</type>
</CustomField>