force-app/main/default/objects/Target_Distribution__c/fields/DTC_BDD__c.field-meta.xml
<CustomField>
    <fullName>DTC_BDD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DTC BDD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Target_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>