force-app/main/default/objects/Target_Distribution__c/fields/DTC_BDM__c.field-meta.xml
<CustomField>
    <fullName>DTC_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DTC BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Target_Distributions1</relationshipName>
    <type>Lookup</type>
</CustomField>