force-app/main/default/objects/Target_Distribution__c/fields/Overall_Target__c.field-meta.xml
<CustomField>
    <fullName>Overall_Target__c</fullName>
    <label>Overall Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>