force-app/main/default/objects/Target_Distribution__c/fields/Sub_channel__c.field-meta.xml
<CustomField>
    <fullName>Sub_channel__c</fullName>
    <label>Sub channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Channel</valueSetName>
    </valueSet>
</CustomField>