force-app/main/default/objects/Target_Distribution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BDD__c</columns>
    <columns>BDM__c</columns>
    <columns>Financial_Year__c</columns>
    <columns>Allocated_Percentage__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Overall_Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>